*SVN*

* strip_links is case-insensitive.  #6285 [tagoh, Bob Silva]

* Clear the cache of possible controllers whenever Routes are reloaded. [Nicholas Seckar]

* Filters overhaul including meantime filter support using around filters + blocks.  #5949 [Martin Emde, Roman Le Negrate, Stefan Kaes, Jeremy Kemper]

* Update RJS render tests. [sam]

* Update CGI process to allow sessions to contain namespaced models. Closes #4638. [dfelstead@site5.com]

* Fix routing to respect user provided requirements and defaults when assigning default routing options (such as :action => 'index'). Closes #5950. [Nicholas Seckar]

* Rescue Errno::ECONNRESET to handle an unexpectedly closed socket connection. Improves SCGI reliability.  #3368, #6226 [sdsykes, fhanshaw@vesaria.com]

* Added that respond_to blocks will automatically set the content type to be the same as is requested [DHH]. Examples:

    respond_to do |format|
      format.html { render :text => "I'm being sent as text/html" }
      format.rss  { render :text => "I'm being sent as application/rss+xml" }
      format.atom { render :text => "I'm being sent as application/xml", :content_type => Mime::XML }
    end

* Added utf-8 as the default charset for all renders. You can change this default using ActionController::Base.default_charset=(encoding) [DHH]

* Added proper getters and setters for content type and charset [DHH]. Example of what we used to do:

    response.headers["Content-Type"] = "application/atom+xml; charset=utf-8"
  
  ...now:
  
    response.content_type = Mime::ATOM
    response.charset      = "utf-8"

* Updated prototype.js to 1.5.0_rc1 with latest fixes. [Rick Olson]

  - XPATH support
  - Make Form.getElements() return elements in the correct order
  - fix broken Form.serialize return

* Declare file extensions exempt from layouts.  #6219 [brandon]
    Example: ActionController::Base.exempt_from_layout 'rpdf'

* Add chained replace/update support for assert_select_rjs [Rick Olson]
